# sentry-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml  circle.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
examples/: cross-threads.rs  log-macro-demo.rs  logger-demo.rs  panic-handler-demo.rs
src/: lib.rs  logging.rs  models.rs  reactor.rs  request.rs
src/workers/: mod.rs  single.rs
tests/: lib_test.rs  models_test.rs
