[package]
name = "sentry-rs"
version = "2.1.1"
authors = ["Eric Coan <ecoan@instructure.com>"]
description = "A Sentry Client for Rust Lang."
license = "MIT"
homepage = "https://github.com/SecurityInsanity/sentry-rs"
repository = "https://github.com/SecurityInsanity/sentry-rs"

[dependencies]
backtrace = "0.3"
chrono = "0.3"
log = "0.3"
hyper = "0.10"
hyper-native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1"

[features]

default = [ "sourcemap" ]
sourcemap = [ ]