[package]
name = "sentry-rs"
version = "2.2.0"
authors = ["Eric Coan <ecoan@instructure.com>"]
description = "A Sentry Client for Rust Lang."
license = "MIT"
homepage = "https://github.com/SecurityInsanity/sentry-rs"
repository = "https://github.com/SecurityInsanity/sentry-rs"

[dependencies]
backtrace = "0.3"
chrono = "0.4"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
hyper = "0.11"
hyper-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1"
yyid = "0.2"

[dev-dependencies]
env_logger = "0.5"

[features]

default = [ "sourcemap" ]
sourcemap = [ ]
